<resources>
    <string name="app_name">YogAI</string>
    <string name="yog">Yog</string>
    <string name="ai">AI</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="reset_password_email">Type Your Email</string>
    <string name="reset_password_link">Send Reset password Link</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_email_to_reset_password">Enter Email to reset password</string>
    <string name="profile">PROFILE</string>
</resources>