<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".RegisterActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_baseline_arrow_back_ios_24"
            android:onClick="backButton" />

    </com.google.android.material.appbar.MaterialToolbar>

    <TextView
        android:id="@+id/logoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/varela_round"
        android:text="@string/forgot_password"
        android:textColor="@color/darkGrey"
        android:textSize="@dimen/splashScreenText"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/guidelineHorizontal32"
        app:layout_constraintLeft_toRightOf="@id/guidelineVertical10"
        app:layout_constraintRight_toLeftOf="@id/guidelineVertical90"
        app:layout_constraintTop_toBottomOf="@+id/materialToolbar" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        app:errorEnabled="true"
        app:errorTextAppearance="@font/varela_round"
        app:errorTextColor="@color/darkPink"
        app:layout_constraintLeft_toRightOf="@id/guidelineVertical10"
        app:layout_constraintRight_toLeftOf="@id/guidelineVertical90"
        app:layout_constraintTop_toBottomOf="@id/guidelineHorizontal32">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_round_alternate_email_24"
            android:drawablePadding="8dp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:inputType="textEmailAddress"
            android:fontFamily="@font/varela_round"
            android:hint="@string/reset_password_email"
            android:textSize="16sp"/>

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/forgotPasswordBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:background="@drawable/button_register"
        android:fontFamily="@font/varela_round"
        android:text="@string/reset_password_link"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@id/guidelineVertical10"
        app:layout_constraintRight_toLeftOf="@id/guidelineVertical90"
        app:layout_constraintTop_toBottomOf="@id/editTextEmail" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.24" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVertical10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.10"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVertical90"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.90"/>


</androidx.constraintlayout.widget.ConstraintLayout>